k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: business-card-agent
spec:
  ingressClassName: nginx
  rules:
    - host: bc-agent.xadgar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: business-card-agent
                port:
                  number: 80
  tls:
    - hosts:
        - bc-agent.xadgar.com
      secretName: bc-agent-xadgar-tls
